--- a/configs/dbconfig.json
+++ b/configs/dbconfig.json
@@ -1,1 +1,1 @@
-{"host": "127.0.0.1", "user": "root", "password": "09092003", "database": "car_features"}
+{"host": "127.0.0.1:3307", "user": "prediction", "password": "prediction", "database": "prediction"}
