--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ PyMySQL==1.1.1
 pyparsing==3.1.2
 pytest==8.2.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 redis==5.0.8
