--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,19 @@ aiohttp==3.9.5
 aiohttp-debugtoolbar==0.6.1
 aiohttp-jinja2==1.6
 aiohttp-middlewares==2.3.0
+aiohttp-session==2.12.0
 aiohttp-swagger==1.0.16
 aiomysql==0.2.0
 aiosignal==1.3.1
 amqp==5.2.0
 async-timeout==4.0.3
 attrs==23.2.0
+bcrypt==4.2.0
 beautifulsoup4==4.12.3
 billiard==4.2.0
 celery==5.4.0
 certifi==2024.6.2
+cffi==1.17.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
@@ -19,6 +22,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 contourpy==1.2.1
+cryptography==43.0.0
 cycler==0.12.1
 exceptiongroup==1.2.1
 fonttools==4.53.0
@@ -40,6 +44,7 @@ pandas==2.2.2
 pillow==10.3.0
 pluggy==1.5.0
 prompt_toolkit==3.0.47
+pycparser==2.22
 PyMySQL==1.1.1
 pyparsing==3.1.2
 pytest==8.2.2
