--- a/requirements.txt
+++ b/requirements.txt
@@ -56,9 +56,11 @@ redis==5.0.8
 requests==2.32.3
 scikit-learn==1.5.0
 scipy==1.13.1
+shortuuid==1.0.13
 six==1.16.0
 soupsieve==2.5
 SQLAlchemy==2.0.31
+structlog==24.4.0
 threadpoolctl==3.5.0
 tomli==2.0.1
 typing_extensions==4.12.2
