--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,8 +20,8 @@ services:
     restart: unless-stopped
     env_file: .env
     network_mode: "host"
-    depends_on:
-      - mysql-database
+    volumes:
+      - ./regression/static:/app/regression/static
 
   worker:
     build: .
@@ -38,3 +38,16 @@ services:
     container_name: redis-db
     ports:
       - 6379:6379
+
+  proxy:
+    image: nginx:stable-alpine
+    container_name: nginx
+    network_mode: "host"
+    ports:
+      - 80:80
+    volumes:
+      - ./regression/static:/usr/share/nginx/html/regression/static
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    command: [ "nginx", "-g", "daemon off;" ]
+    depends_on:
+      - web
